<resources>
    <string name="app_name">RealWorldPokemon</string>
    <!-- Back4App -->
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id">IAaie0HETvKdO9J8xVqXhvloyKx3f6is9atDTMQF</string>
    <string name="back4app_client_key">LDorJ3tuAHBhcpFjMMYgTuaRb1Xd1vnOi7R27nrW</string>
    <!-- Strings -->
    <string name="welcome_text">Welcome to Pokemon World!</string>
    <string name="welcome_hint_password">Password</string>
    <string name="welcome_hint_username">Username</string>
    <string name="welcome_hint_email">Email</string>
    <string name="welcome_login_button">Log in</string>
    <string name="welcome_incorrect_login_text">Incorrect username or password!</string>
    <string name="welcome_incorrect_signup_text">Something went wrong when registering!</string>
    <string name="welcome_new_user_text">I am a new user</string>
    <string name="welcome_existing_user_text">I already have an account</string>
    <string name="welcome_signup_button">Sign up</string>
    <string name="title_activity_maps">Map</string>
    <string name="pokemon_level">16</string>
    <string name="pokemon_seen">Pokemon caught:</string>
    <string name="options_dark_theme">Enable dark theme?</string>
    <string name="options_sound">Enable sound?</string>
    <string name="options_volume">Volume:</string>
    <string name="options_change_avatar">Change avatar</string>
    <string name="options_change_password">Change password</string>
    <string name="options_logout">Logout</string>
</resources>
